Add LinkedIn icon and link to Footer component for enhanced social media presence

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,7 @@ import logo from "@/assets/Purro_Logotype_White.png";
 import twitter from "@/assets/xIcon.svg";
 import telegram from "@/assets/teleIcon.svg";
 import discord from "@/assets/discordIcon.svg";
+import linkedin from "@/assets/linkedinIcon.svg";
 ---
 
 <div class="relative bg-gradient-to-b from-[#021919] to-[#081919]">
@@ -54,6 +55,15 @@ import discord from "@/assets/discordIcon.svg";
             class="p-2 bg-white/10 rounded-lg hover:bg-white/20 transition-all duration-300"
           >
             <img src={discord.src} alt="Discord" class="h-5 w-5" />
+          </a>
+          <a
+            href="https://www.linkedin.com/company/purrowallet"
+            aria-label="Purro on LinkedIn"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="p-2 bg-white/10 rounded-lg hover:bg-white/20 transition-all duration-300"
+          >
+            <img src={linkedin.src} alt="LinkedIn" class="h-5 w-5" />
           </a>
         </div>
       </div>
