--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ import ToasterWrapper from "../components/ToasterWrapper";
     <meta property="og:image" content="/opengraph.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta property="og:logo" content="/purro-icon-dark.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://purro.xyz" />
     <meta property="og:site_name" content="Purro" />
